--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -78,6 +78,12 @@ Alan, another refurbisher of unwanted systems, likes to use <a href="https://ant
   There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux</a> (core is text only, TinyCore has a GUI and CorePlus has extra apps). The book, "Into the core - A look at Tiny Core Linux" is available <a href="http://tinycorelinux.net/book.html">online</a>.
 </p>
 
+<h3>Heavy-weight Linuxes</h3>
+<ul>
+  <li><a href="https://www.opensuse.org/">openSUSE</a></li>
+  <li><a href="https://www.redhat.com/en">Red Hat (you need to sign up as a Developer, I believe).</a></li>
+</ul>
+
 
 <a id="creating-bootable-installation-media"></a>
 <h2>Creating bootable installation media for downloaded iso files</h2>
@@ -170,7 +176,7 @@ If your Windows computer is heavily infected with viruses, search on <a href="ht
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 20th July 2024
+ Created : Years Ago. Last update : 6th October 2024
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
