--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -15,6 +15,10 @@ There are a lot of free software packages out there. The systems I am most famil
 For U.K. government advice on security, see this website - <a href="https://www.ncsc.gov.uk/cyberaware/home">Cyber Essentials</a>
 </p>
 
+<p>
+To get information on local Linux User Groups in the UK, see this website - <a href="https://lug.org.uk/">lug.org.uk</a>
+</p>
+
 <h2>Windows - Free Software</h2>
 <p>
   <h3>Security Software</h3>
@@ -53,7 +57,7 @@ The GNU people have created a page about free programs and the commercial progra
 
 <h2>Linux</h2>
 <p>
-  With Linux (I use mainly <a href="https://ubuntu.com/">Ubuntu</a> - or <a href="https://www.debian.org/">Debian Linux</a> or <a href="https://lubuntu.me/">lubuntu</a> on older computers and someone I know really likes <a href="https://peppermintos.com/">Peppermint Linux (Debian based)</a> OR <a href="https://antixlinux.com/">Antix Linux (Debian based)</a>), the challenge is knowing which packages your free software is in.
+  With Linux (I use mainly <a href="https://ubuntu.com/">Ubuntu (Debian based)</a> - or <a href="https://www.debian.org/">Debian Linux</a> or <a href="https://lubuntu.me/">lubuntu</a> on older computers and someone I know really likes <a href="https://peppermintos.com/">Peppermint Linux (Debian based)</a> OR <a href="https://antixlinux.com/">Antix Linux (Debian based)</a>), the challenge is knowing which packages your free software is in.
 </p>
 
 <p>
@@ -72,18 +76,18 @@ The GNU people have created a page about free programs and the commercial progra
 
 <h3>Frugal Linuxes</h3>
 <p>
-Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with... another thing I haven't experimented with is <a href="https://xubuntu.org/">xubuntu</a> or <a href="https://almalinux.org/">AlmaLinux</a>,an RPM based distro that is currently 1:1 binary compatible with Red Hat Enterprise Linux. For information about different Linux or BSD operating systems, see <a href="https://distrowatch.com">DistroWatch</a>.
+Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with... another thing I haven't experimented with is <a href="https://xubuntu.org/">xubuntu</a>. For information about different Linux or BSD operating systems, see <a href="https://distrowatch.com">DistroWatch</a>.
 </p>
 <p>
   There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux</a> (core is text only, TinyCore has a GUI and CorePlus has extra apps). The book, "Into the core - A look at Tiny Core Linux" is available <a href="http://tinycorelinux.net/book.html">online</a>.
 </p>
 
-<h3>Heavy-weight Linuxes</h3>
+<h3>Heavy-weight RPM-based Linuxes</h3>
 <ul>
   <li><a href="https://www.opensuse.org/">openSUSE</a></li>
   <li><a href="https://www.redhat.com/en">Red Hat (you need to sign up as a Developer, I believe).</a></li>
+  <li><a href="https://almalinux.org/">AlmaLinux - currently 1:1 binary compatible with Red Hat Enterprise Linux</a></li>
 </ul>
-
 
 <a id="creating-bootable-installation-media"></a>
 <h2>Creating bootable installation media for downloaded iso files</h2>
@@ -160,14 +164,15 @@ If your Windows computer is heavily infected with viruses, search on <a href="ht
 
 </ul> <!-- End of Linux Live CD/DVDs (technical stuff) -->
 
-<h2>Ubuntu Linux Software </h2>
+<h2>Linux Software I have played with on Linux</h2>
 <p>This can come in a number of formats. Some as packages (aka .deb files), some as Snaps. There is a debate over which is the better format. Here is a mixed collection of software that I like to use on a day to day basis:-</p>
 <ul>
   <li>LibreOffice - office package already mentioned previously on this page.</li>
   <li>emacs - a text editor with a LISP programming engine (I am still getting to grips with emacs Lisp)</li>
   <li>bash - a command line / scripting language that is built into Ubuntu Linux</li>
   <li>Firefox - web browser</li>
-  <li>Stuff to try: usbguard - dealing with rogue USB devices , usbview - graphical representation of USB devices plugged in, fuse-emulator-gtk - Specrum Emulator</li>
+  <li>Stuff to try: usbguard - dealing with rogue USB devices , usbview - graphical representation of USB devices plugged in, fuse-emulator-gtk - Specrum Emulator, <a href="https://www.kicad.org/about/kicad/">KiCAD - Electronic Design Automation</a>
+  </li>
 </ul>
 
 <h2>Notes on markdown and HTML </h2>
@@ -176,7 +181,7 @@ If your Windows computer is heavily infected with viruses, search on <a href="ht
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 6th October 2024
+ Created : Years Ago. Last update : 23rd December 2024
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
