--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -74,9 +74,9 @@ The GNU people have created a page about free programs and the commercial progra
   With Linux, there are at least two databases about packages. The package database on your computer tracks what is installed and which version it is. The databases on the server(s) track information about the packages held on the server. The use of a Package Manager in Linux is particularly helpful as, in Ubuntu's case, the software is installed from servers holding repositories of free software. A package manager can also acts as a kind of safe "Google for packages to install". If you want some software to accomplish a particular task, run your Package Manager and take things from there. Also, because of the databases mentioned previously, a "Software Updater" programme can run every so often and tell the user about newer releases of currently installed software.
 </p>
 
-<h3>Ubuntu specific - which flavour to use, how to install, how to get using Ubuntu</h3>
+<h3>Ubuntu Linux specific pages</h3>
 <ul>
-  <li><a href="https://www.ubuntu.com/desktop">Official Ubuntu site for downloading and documentation</a></li>
+  <li><a href="https://www.ubuntu.com/desktop">Official Ubuntu site for downloading and documentation.</a></li>
   <li><a href="https://ubuntu.com/tutorials/install-ubuntu-desktop#0">Official Ubuntu page for installing Ubuntu Desktop.</a></li>
   <li><a href="https://ubuntu.com/tutorials/try-ubuntu-before-you-install#1-getting-started">Official Ubuntu page for trying Ubuntu before you install it..</a></li>
   <li><a href="https://www.makeuseof.com/tag/migrating-from-windows-7-to-ubuntu/">MUD: Migrating From Windows to Ubuntu: The Ultimate Guide.</a></li>
