30th March Update
Mainly rearranging the Linux distro info.

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -56,6 +56,9 @@ The GNU people have created a page about free programs and the commercial progra
 </p>
 
 <h2>Linux</h2>
+  <p>For information about different Linux or BSD operating systems, see <a href="https://distrowatch.com">DistroWatch</a>.
+  </p>
+  
 <p>
   With Linux (I use mainly <a href="https://ubuntu.com/">Ubuntu (Debian based)</a> - or <a href="https://www.debian.org/">Debian Linux</a> or <a href="https://lubuntu.me/">lubuntu</a> on older computers and someone I know really likes <a href="https://peppermintos.com/">Peppermint Linux (Debian based)</a> OR <a href="https://antixlinux.com/">Antix Linux (Debian based)</a>), the challenge is knowing which packages your free software is in.
 </p>
@@ -86,11 +89,16 @@ The GNU people have created a page about free programs and the commercial progra
 </ul>
 
 <h3>Frugal Linuxes</h3>
+<ul>
+  <li>Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with...</li>
+  <li>I have experimented with Xubuntu <a href="https://xubuntu.org/">xubuntu</a> - gives Ubuntu with a lighter-weight desktop environment.</li>
+  <li>Something that is intended for really small systems (but quite demanding to install) is <a href="https://www.alpinelinux.org/">Alpine Linux</a>, with documentation  <a href="https://docs.alpinelinux.org/">here</a> and a <a href="https://wiki.alpinelinux.org/wiki/Main_Page">wiki here</a>.</li>
+  <li>
+There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux</a> (core is text only, TinyCore has a GUI and CorePlus has extra apps). The book, "Into the core - A look at Tiny Core Linux" is available <a href="http://tinycorelinux.net/book.html">online</a>.  </li>
+</ul>
+
 <p>
-Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with... another thing I haven't experimented with is <a href="https://xubuntu.org/">xubuntu</a>. For information about different Linux or BSD operating systems, see <a href="https://distrowatch.com">DistroWatch</a>.
-</p>
-<p>
-  There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux</a> (core is text only, TinyCore has a GUI and CorePlus has extra apps). The book, "Into the core - A look at Tiny Core Linux" is available <a href="http://tinycorelinux.net/book.html">online</a>.
+  
 </p>
 
 <h3>Heavy-weight RPM-based Linuxes</h3>
@@ -98,6 +106,13 @@ Alan, another refurbisher of unwanted systems, likes to use <a href="https://ant
   <li><a href="https://www.opensuse.org/">openSUSE</a></li>
   <li><a href="https://www.redhat.com/en">Red Hat (you need to sign up as a Developer, I believe).</a></li>
   <li><a href="https://almalinux.org/">AlmaLinux - currently 1:1 binary compatible with Red Hat Enterprise Linux</a></li>
+</ul>
+
+<h3>Linux on Apple hardware</h3>
+<p>I don't use Apple hardware but if I see any useful things online about running Linux on Apple hardware, I'll cite it here</p>
+<ul>
+  <li><a href="https://medium.com/@rowaido.game/reviving-an-old-macbook-pro-with-ubuntu-linux-689252fa4b9c">Reviving an old MacBook Pro with Ubuntu Linux (medium.com)</a></li>
+  <li><a href="https://t2linux.org/">Linux support for Apple devices with the T2 security chip</a></li>
 </ul>
 
 <a id="creating-bootable-installation-media"></a>
@@ -192,7 +207,7 @@ If your Windows computer is heavily infected with viruses, search on <a href="ht
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 23rd February 2025
+ Created : Years Ago. Last update : 27th March 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
