New info on Linux courses

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -19,6 +19,9 @@ For U.K. government advice on security, see this website - <a href="https://www.
 To get information on local Linux User Groups in the UK, see this website - <a href="https://lug.org.uk/">lug.org.uk</a>
 </p>
 
+<p>If you ask for help online, please read <a href="http://www.catb.org/esr/faqs/smart-questions.html">How To Ask Questions The Smart Way.</a>
+</p>
+
 <h2>Windows - Free Software</h2>
   <h3>Security Software</h3>
   <ul>    
@@ -93,6 +96,7 @@ The GNU people have created a page about free programs and the commercial progra
 <h3>Frugal Linuxes</h3>
 <ul>
   <li>Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with...</li>
+  <li>Useful on slow x86_64 systems is <a href="https://archbang.org/">ArchBang</a>, a live distro.</li>
   <li>I have experimented with Xubuntu <a href="https://xubuntu.org/">xubuntu</a> - gives Ubuntu with a lighter-weight desktop environment.</li>
   <li>Something that is intended for really small systems (but quite demanding to install) is <a href="https://www.alpinelinux.org/">Alpine Linux</a>, with documentation  <a href="https://docs.alpinelinux.org/">here</a> and a <a href="https://wiki.alpinelinux.org/wiki/Main_Page">wiki here</a>.</li>
   <li>
@@ -204,13 +208,19 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   </li>
 </ul>
 
+<h2>Linux courses</h2>
+<ul>
+  <li><a href="https://www.geeksforgeeks.org/best-linux-online-courses/">Best Linux online courses (geeksforgeeks.org).</a></li>
+  <li><a href="https://linuxupskillchallenge.org/">linuxupskillchallenge.org</a></li>
+</ul>
+
 <h2>Notes on markdown and HTML </h2>
 <ul>
   <li><a href="https://www.markdownguide.org/getting-started/">Getting started with Markdown</a></li>
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 6th April 2025
+ Created : Years Ago. Last update : 22nd May 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
