Added link to the "awesome project"

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -22,6 +22,8 @@ To get information on local Linux User Groups in the UK, see this website - <a h
 <p>If you ask for help online, please read <a href="http://www.catb.org/esr/faqs/smart-questions.html">How To Ask Questions The Smart Way.</a>
 </p>
 
+<p>The <a href="https://github.com/sindresorhus/awesome">Awesome Project</a> is an attempt to classify just about everything. Take a look...</p>
+
 <h2>Windows - Free Software</h2>
   <h3>Security Software</h3>
   <ul>    
@@ -220,7 +222,7 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 22nd May 2025
+ Created : Years Ago. Last update : 29th May 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
