I added Arch documentation, btw...
Added link to Arch documentation as it is apparently useful to users of other distros...

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -95,6 +95,12 @@ The GNU people have created a page about free programs and the commercial progra
   <li><a href="https://extensions.gnome.org">Extensions for the GNOME desktop.</a></li>
 </ul>
 
+<h3>Other Linux specific documentation pages</h3>
+<ul>
+  <li><a href="https://wiki.archlinux.org/title/General_recommendations">Arch Linux documentation.</a></li>
+</ul>
+
+
 <h3>Frugal Linuxes</h3>
 <ul>
   <li>Alan, another refurbisher of unwanted systems, likes to use <a href="https://antixlinux.com/">antiX Linux</a> on his old systems, something I haven't experimented with...</li>
@@ -222,7 +228,7 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 29th May 2025
+ Created : Years Ago. Last update : 12th June 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
