LAMP stack help uploaded
Links to a couple of ways to install NextCloud on Ubuntu Linux.

I will try them, one day...

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -222,13 +222,19 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li><a href="https://linuxupskillchallenge.org/">linuxupskillchallenge.org</a></li>
 </ul>
 
-<h2>Notes on markdown and HTML </h2>
+<h2>Linux server stuff - untried</h2>
+<ul>
+  <li><a href="https://mailserverguru.com/install-nextcloud-on-ubuntu-22-04-lts/">Install NextCloud on Ubuntu 22.04 LTS.</a></li>
+  <li><a href="https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-nextcloud-on-ubuntu-20-04">How to install and configure Nextcloud on Ubuntu 20.04.</a></li>
+</ul>
+
+<h2>Notes on markdown and HTML</h2>
 <ul>
   <li><a href="https://www.markdownguide.org/getting-started/">Getting started with Markdown</a></li>
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 12th June 2025
+ Created : Years Ago. Last update : 17th June 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
