Attempting to get in-page links working
Attempting to get in-page links working by using the --no-skip-internal-links option for html2markdown

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -149,7 +149,7 @@ The GNU people have created a page about free programs and the commercial progra
   <li>Before you move your system from Windows to Linux, get some real experience of using Linux.</li>
   <li>Always back up your data before installing an operating system or re-partitioning your computer's drive.</li>
   <li>If you ABSOLUTELY must use Windows specific software and cannot spare time to find a Linux solution, don't bother changing.</li>
-  <li>At the time of writing, Adobe Software - Photoshop etc does not run on Linux so don't bother changing if you can only use them.</li>
+  <li>At the time of writing, Adobe Software - Photoshop etc does not run on Linux so don't bother changing if you can only use them. However, for other pieces of Windows software, the <a href="https://alternativeto.net/">alternativeto.net</a> website might find a suitable replacement for you.</li>
   <li>If you can't handle change, don't move from Windows to Linux. Moving takes effort.</li>
   <li>Install LibreOffice on Windows. See if you can use it instead of Microsoft Windows. You'll have to use LibreOffice if you move to Linux.</li>
 </ol>
@@ -198,13 +198,15 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
 <a id="creating-bootable-installation-media"></a>
 <h2>Creating bootable installation media for downloaded iso files</h2>
 <ul>
- <li>Startup Disc Creator (aka usb-creator-gtk) - for creating install media for different releases of Linux etc. Brasero to record isos onto DVD or CD</li>
- 
- <li>To create a USB memory stick to boot a single iso, use usb-creator-gtk. If you want multiple isos on a memory stick,
-     see <a href="https://www.ventoy.net/en/index.html">Ventoy</a>.
- </li>
+  <li>For multiple isos on the same memory stick, download Ventoy from <a href="https://sourceforge.net/projects/ventoy/">sourceforge</a> and visit 
+   <a href="https://www.ventoy.net/en/index.html">Ventoy's website</a> for more details.
+   You can create bootable USB flash drives (nice GUI etc) in Windows, Linux, etc to put multiple iso files on the same USB memory stick.</li> 
+
+  <li>Startup Disc Creator (aka usb-creator-gtk) - for creating install media (USB memory stick or SD card) for different releases of Linux and other isos etc. </li>
+
+  <li>Use <a href="https://wiki.gnome.org/Apps/Brasero">Brasero</a> to record isos onto DVD or CD.</li>
    <li>Use <a href="https://rufus.ie/en/">Rufus</a> create a bootable USB flash drives (nice GUI etc) in Windows using a single iso file.</li> 
-   <li>Use <a href="https://www.ventoy.net/en/index.html">Ventoy</a> create bootable USB flash drives (nice GUI etc) in Windows, Linux, etc to put multiple iso files on the same USB memory stick.</li> 
+
 </ul>
 
 <a id="linux-for-phones-and-other-mobile-devices"></a>
@@ -231,7 +233,7 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   
   <li>To wipe confidential files and free up disk space, see <a href="https://www.bleachbit.org/">BleachBit</a>.</li>
   
-  <li>To create a USB memory stick to boot a variety of ISO files, see <a href="https://www.ventoy.net/en/index.html">Ventoy</a>
+  <li>To create a USB memory stick to boot a variety of ISO files, see Ventoy
       listed under <a href="#creating-bootable-installation-media">Creating bootable installation media</a>.</li>
 
   <li>To display technical info about your system see 
@@ -245,7 +247,8 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
 <a id="Linux-live-CDs-DVDs-isos"></a>
 <h2>Linux Live CD/DVDs/ISOs, Repair etc Linux distros (technical stuff)</h2>
 <p>
-  Some Linuxes come on "live CDs". This means that you can start a computer with the CD/DVD inside it and have it run Linux without modifying your hard disc. A live CD/DVD is stored on a server with a filename ending in ".iso". In order to use it, you or a friend need to download the iso, <a href="#creating-bootable-installation-media">use special software</a> to put it onto recordable CD or DVD, and follow the instructions. Use <a href="https://rufus.ie/en/">Rufus</a> create bootable USB flash drives (nice GUI etc) in Windows. To put multiple isos on the same USB memory stick use <a href="https://www.ventoy.net/en/index.html">Ventoy</a>.
+  Some Linuxes come on "live CDs". This means that you can start a computer with the CD/DVD inside it and have it run Linux without modifying your hard disc. A live CD/DVD is stored on a server with a filename ending in ".iso". In order to use it, you or a friend need to download the iso, <a href="#creating-bootable-installation-media">use special software</a> to put it onto recordable CD or DVD, and follow the instructions. Use <a href="https://rufus.ie/en/">Rufus</a> create bootable USB flash drives (nice GUI etc) in Windows.
+  To put multiple isos on the same USB memory stick see Ventoy listed under <a href="#creating-bootable-installation-media">Creating bootable installation media</a>.
 </p>
 <ul>
 <li><a href="https://aban.derobert.net/">aban</a> is an open-source alternative to <a href="https://dban.org/">dban</a>. They will both wipe one or more hard discs attached to your computer.</li>
@@ -327,7 +330,7 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update : 30th June 2025
+ Created : Years Ago. Last update 11th August 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
